<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.wrench.livedataprefs.LiveDataPreferencesFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/string_configuration_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:padding="8dp"
                android:text="@string/string_configuration"
                app:layout_constraintBottom_toTopOf="@+id/string_configuration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/string_configuration"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@{viewModel.stringConfiguration}"
                app:layout_constraintBottom_toTopOf="@+id/url_configuration_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/string_configuration_title"
                tools:layout_constraintTop_creator="1"
                tools:text="string value" />

            <TextView
                android:id="@+id/url_configuration_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:padding="8dp"
                android:text="@string/url_configuration"
                app:layout_constraintBottom_toTopOf="@+id/url_configuration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/string_configuration"
                app:layout_constraintVertical_chainStyle="packed"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/url_configuration"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@{viewModel.urlConfiguration}"
                app:layout_constraintBottom_toTopOf="@+id/boolean_configuration_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_configuration_title"
                tools:layout_constraintTop_creator="1"
                tools:text="string value" />

            <TextView
                android:id="@+id/boolean_configuration_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:padding="8dp"
                android:text="@string/boolean_configuration"
                app:layout_constraintBottom_toTopOf="@+id/boolean_configuration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_configuration"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/boolean_configuration"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@{String.valueOf(safeUnbox(viewModel.booleanConfiguration))}"
                app:layout_constraintBottom_toTopOf="@+id/int_configuration_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boolean_configuration_title"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                tools:text="true|false" />

            <TextView
                android:id="@+id/int_configuration_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:padding="8dp"
                android:text="@string/int_configuration"
                app:layout_constraintBottom_toTopOf="@+id/int_configuration"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boolean_configuration"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/int_configuration"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@{String.valueOf(viewModel.intConfiguration)}"
                app:layout_constraintBottom_toTopOf="@+id/enum_configuration_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/int_configuration_title"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                tools:text="4" />

            <TextView
                android:id="@+id/enum_configuration_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:padding="8dp"
                android:text="@string/enum_configuration"
                app:layout_constraintBottom_toTopOf="@+id/enum_configuration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/int_configuration"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/enum_configuration"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@{String.valueOf(viewModel.enumConfiguration)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enum_configuration_title"
                app:layout_constraintVertical_bias="0.5"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                tools:text="ENUM_VALUE" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>